2013-08-19  Ingo Feinerer <feinerer@logic.at>

	* R/corpus.R (setOldClass): Do not register VCorpus as S4 class
	anymore.

	* R/doc.R (setOldClass): Do not register PlainTextDocument as S4 class
	anymore.

2013-08-09  Ingo Feinerer <feinerer@logic.at>

	* DESCRIPTION (License): Changed to GPL-3.

2013-07-25  Ingo Feinerer <feinerer@logic.at>

	* R/complete.R (stemCompletion): Report NA instead of error when no
	completion can be found by the prevalent heuristic. Suggested by Hugh
	Devlin.

2013-07-10  Ingo Feinerer <feinerer@logic.at>

	* R/reader.R (readPDF): Use tm:::pdfinfo() (which needs the pdfinfo
	command line tool) instead of tools:::pdf_info().

2013-04-11  Ingo Feinerer <feinerer@logic.at>

	* R/transform.R (removeWords): Use PCRE UCP to use Unicode properties
	to determine character types.

2012-12-14  Ingo Feinerer <feinerer@logic.at>

	* R/matrix.R (TermDocumentMatrix): Ensure dimnames of type character
	when generating a simple_triplet_matrix. Reported by Arho Suominen. 

2012-12-10  Ingo Feinerer <feinerer@logic.at>

	* man/tm_reduce.Rd: Document right to left folding order. Adapt
	example as well. Suggested by Mark Rosenstein.

2012-12-04  Ingo Feinerer <feinerer@logic.at>

	* R/filter.R (sFilter): Avoid attach() and simplify.

2012-11-02  Ingo Feinerer <feinerer@logic.at>

	* R/doc.R (.TextDocument): Use casts to ensure data types and to avoid
	removal of attributes.

2012-10-03 Ingo Feinerer  <feinerer@logic.at>

	* R/weight.R (weightTfIdf, weightSMART): Gracefully handle empty
	columns and rows (avoids blow-up due to NaN values). Suggested by Jaap
	Frölich.

2012-07-27 Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (removeWords): Allow longer stopword lists.

2012-01-31  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readXML): Readers can now set the document language
	themselves.

2012-01-14  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (XMLSource, getElem.XMLSource): Simplifications as
	proposed by Milan Bouchet-Valat.
